--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -37,7 +37,7 @@
 }
 
 .how-it-works__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial Narrow", "Arial", sans-serif;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
