--- a/source/styles/blocks/page-content.scss
+++ b/source/styles/blocks/page-content.scss
@@ -2,7 +2,7 @@
 @use "../common/mixins.scss" as *;
 
 .page-content__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial Narrow", "Arial", sans-serif;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
