--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -15,3 +15,5 @@ $decoration-line-menu: #e6e6e6;
 //viewports
 $tablet-width: 768px;
 $desktop-width: 1440px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
