--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -59,7 +59,7 @@
 }
 
 .example__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial Narrow", "Arial", sans-serif;
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
