--- a/source/styles/blocks/list-item.scss
+++ b/source/styles/blocks/list-item.scss
@@ -45,11 +45,25 @@
     opacity: 0.3;
     transition: opacity 0.3s ease;
   }
+
+  &--product-title {
+    min-width: unset;
+    min-height: unset;
+    width: auto;
+    height: auto;
+    margin-bottom: 0;
+    display: flex;
+    justify-content: flex-start;
+  }
 }
 
+.list-item__image {
+  width: 100%;
+  height: 100%;
+}
 
 .list-item__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial Narrow", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
@@ -116,7 +130,7 @@
 }
 
 .list-item__link-order {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial Narrow", sans-serif;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
