--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -25,7 +25,7 @@
   max-width: 320px;
 
   @media screen and (min-width: $tablet-width) {
-    max-width: 708px;
+    min-width: 708px;
     justify-content: center;
     margin: 0 auto;
   }
@@ -37,7 +37,7 @@
 }
 
 .subscribe__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial Narrow", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
@@ -63,7 +63,7 @@
     font-size: 32px;
     line-height: 32px;
     padding: 0 40px;
-    margin-bottom: 66px;
+    margin: 0 0 66px;
   }
 
   @media screen and (min-width: $desktop-width) {
@@ -74,7 +74,7 @@
 }
 
 .subscribe__desc {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial Narrow", sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -137,7 +137,7 @@
 }
 
 .subscribe__form-button {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial Narrow", sans-serif;
   font-size: 20px;
   line-height: 26px;
   color: $base-accent-color-text;
