--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-  font-family: "Lato", "arial", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 14px;
   margin: 0;
   min-width: 320px;
@@ -19,4 +19,9 @@ body {
 
 a {
   text-decoration: none;
+}
+
+picture {
+  display: block;
+  line-height: 0;
 }
